sort.baseball.NaiveBaseball.scala.error
Erreur de compilation :
NaiveBaseball:8: error: not found: value base
        var d=(getCouleurJoueur(trouB,position)-base)%4
                                                ^